# filenamify-rs

./: Cargo.toml
src/: bin.rs
