[package]
name = "filenamify"
version = "0.2.0"
authors = ["Chawye Hsu <chawyehsu@hotmail.com>"]
description = "Convert a string to a valid safe filename."
license = "MIT OR Apache-2.0"
repository = "https://github.com/chawyehsu/filenamify-rs"
edition = "2018"
readme = "README.md"
categories = ["text-processing"]
keywords = ["filename", "normalize"]


[lib]
name = "filenamify"
path = "src/lib.rs"

[[bin]]
name = "filenamify"
path = "src/bin.rs"

[dependencies]
regex = "1.5"
